Added Orders views and controllers, added functionality for making orders, added session logic.

--- a/Views/Authors/Details.cshtml
+++ b/Views/Authors/Details.cshtml
@@ -1,13 +1,11 @@
 ﻿@model Bookstore.Models.Author
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Author Details";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Author</h4>
+    <h4>Author Details</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
