--- a/Views/Books/Edit.cshtml
+++ b/Views/Books/Edit.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Bookstore.Models.Book
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Book";
 }
 
-<h1>Edit</h1>
-
-<h4>Book</h4>
+<h4>Edit Book</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
