--- a/Views/Authors/Create.cshtml
+++ b/Views/Authors/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Bookstore.Models.Author
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Author";
 }
 
-<h1>Create</h1>
-
-<h4>Author</h4>
+<h4>Add Author</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,15 +30,12 @@
                 <input asp-for="Country" class="form-control" />
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Create" class="btn btn-primary" /> |
+                <a asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
