--- a/Views/Authors/Index.cshtml
+++ b/Views/Authors/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Bookstore.Models.Author>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Authors";
 }
 
-<h1>Index</h1>
+<h1>Authors</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
