--- a/Views/Books/Create.cshtml
+++ b/Views/Books/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Bookstore.Models.Book
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Book";
 }
 
-<h1>Create</h1>
-
-<h4>Book</h4>
+<h4>Create Book</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -36,15 +34,12 @@
                 <label asp-for="AuthorId" class="control-label"></label>
                 <select asp-for="AuthorId" class ="form-control" asp-items="ViewBag.AuthorId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Create" class="btn btn-primary" /> |
+                <a asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
