--- a/Views/Books/Delete.cshtml
+++ b/Views/Books/Delete.cshtml
@@ -1,51 +1,46 @@
 ﻿@model Bookstore.Models.Book
 
 @{
-    ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Delete Book";
 }
 
-<h1>Delete</h1>
+<h4>Delete Book</h4>
+<hr />
+<dl class="row">
+	<dt class="col-sm-2">
+		@Html.DisplayNameFor(model => model.Title)
+	</dt>
+	<dd class="col-sm-10">
+		@Html.DisplayFor(model => model.Title)
+	</dd>
+	<dt class="col-sm-2">
+		@Html.DisplayNameFor(model => model.Genre)
+	</dt>
+	<dd class="col-sm-10">
+		@Html.DisplayFor(model => model.Genre)
+	</dd>
+	<dt class="col-sm-2">
+		@Html.DisplayNameFor(model => model.Price)
+	</dt>
+	<dd class="col-sm-10">
+		@Html.DisplayFor(model => model.Price)
+	</dd>
+	<dt class="col-sm-2">
+		@Html.DisplayNameFor(model => model.ReleaseDate)
+	</dt>
+	<dd class="col-sm-10">
+		@Html.DisplayFor(model => model.ReleaseDate)
+	</dd>
+	<dt class="col-sm-2">
+		@Html.DisplayNameFor(model => model.Author)
+	</dt>
+	<dd class="col-sm-10">
+		@($"{Model.Author.FirstName} {Model.Author.LastName}")
+	</dd>
+</dl>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Book</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Genre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Genre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReleaseDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReleaseDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
-        <dd class = "col-sm-10">
-            @($"{Model.Author.FirstName} {Model.Author.LastName}")
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+<form asp-action="Delete">
+	<input type="hidden" asp-for="Id" />
+	<input type="submit" value="Delete" class="btn btn-danger" /> |
+	<a asp-action="Index">Back to List</a>
+</form>
