--- a/Views/Customers/Create.cshtml
+++ b/Views/Customers/Create.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Bookstore.Models.Customer
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Customer";
 }
 
-<h1>Create</h1>
-
-<h4>Customer</h4>
+<h4>Create Customer</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
