--- a/Views/Orders/Create.cshtml
+++ b/Views/Orders/Create.cshtml
@@ -33,17 +33,23 @@
 							@Html.DisplayFor(modelItem => orderDetails.Book.Title)
 						</td>
 						<td>
-							@Html.DisplayFor(modelItem => orderDetails.Book.Price)
+							$@Html.DisplayFor(modelItem => orderDetails.Book.Price)
 						</td>
 						<td>
 							@Html.DisplayFor(modelItem => orderDetails.Quantity)
 						</td>
 						<td>
-							@Html.DisplayFor(modelItem => orderDetails.TotalPrice)
+							$@Html.DisplayFor(modelItem => orderDetails.TotalPrice)
 						</td>
 					</tr>
 				}
 			</tbody>
+            <tfoot>
+				<tr>
+                    <td colspan="3">Total</td>
+                    <td>$@(Model.OrderDetails.Select(od => od.TotalPrice).Sum()</td>
+				</tr>
+			</tfoot>
 		</table>
 
     </div>
@@ -53,18 +59,15 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Order.CustomerId" class="control-label"></label>
+                <label asp-for="Order.Customer" class="control-label"></label>
                 <select asp-for="Order.CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+				<input type="submit" value="Create" class="btn btn-primary" /> |
+				<a asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
