--- a/Views/Orders/Edit.cshtml
+++ b/Views/Orders/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Bookstore.Models.Order
+﻿@model Bookstore.Models.ViewModels.OrderViewData
 
 @{
     ViewData["Title"] = "Edit Order";
@@ -7,29 +7,80 @@
 <h4>Edit Order</h4>
 <hr />
 <div class="row">
+	<div class="col-md-4">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>
+						@Html.DisplayNameFor(model => model.OrderDetails[0].Book.Title)
+					</th>
+					<th>
+						@Html.DisplayNameFor(model => model.OrderDetails[0].Book.Price)
+					</th>
+					<th>
+						@Html.DisplayNameFor(model => model.OrderDetails[0].Quantity)
+					</th>
+					<th>
+						@Html.DisplayNameFor(model => model.OrderDetails[0].TotalPrice)
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var orderDetails in Model.OrderDetails)
+				{
+					<tr>
+						<td>
+							@Html.DisplayFor(modelItem => orderDetails.Book.Title)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => orderDetails.Book.Price)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => orderDetails.Quantity)
+						</td>
+						<td>
+							@Html.DisplayFor(modelItem => orderDetails.TotalPrice)
+						</td>
+					</tr>
+				}
+			</tbody>
+			<tfoot>
+				<tr>
+					<td colspan="3">Total</td>
+					<td>@string.Format("{0:c}", Model.OrderDetails.Select(od => od.TotalPrice).Sum())</td>
+				</tr>
+			</tfoot>
+		</table>
+
+	</div>
+</div>
+<div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+			<input type="hidden" asp-for="Order.Id" />
+			<input type="hidden" asp-for="Order.OrderTotalPrice" value="@Model.Order.OrderTotalPrice" />
             <div class="form-group">
-                <label asp-for="OrderDate" class="control-label"></label>
-                <input asp-for="OrderDate" class="form-control" />
-                <span asp-validation-for="OrderDate" class="text-danger"></span>
+                <label asp-for="Order.OrderDate" class="control-label"></label>
+				<input asp-for="Order.OrderDate" class="form-control" disabled />
+				<span asp-validation-for="Order.OrderDate" class="text-danger"></span>
+            </div>
+            <div class="form-group my-2">
+				<label asp-for="Order.IsComplete" class="control-label"></label>
+				<input asp-for="Order.IsComplete" />
+				<span asp-validation-for="Order.IsComplete" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
-                <span asp-validation-for="CustomerId" class="text-danger"></span>
+				<label asp-for="Order.Customer" class="control-label"></label>
+				<select asp-for="Order.CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
+				<span asp-validation-for="Order.CustomerId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mt-2">
+				<input type="submit" value="Save" class="btn btn-primary" /> |
+				<a asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
