--- a/Views/Customers/Delete.cshtml
+++ b/Views/Customers/Delete.cshtml
@@ -4,6 +4,11 @@
 	ViewData["Title"] = "Delete Customer";
 }
 
+@if (TempData["CustomerError"] != null)
+{
+	<p class="text-danger">@TempData["CustomerError"]</p>
+}
+
 <h4>Delete Customer</h4>
 <hr />
 <dl class="row">
